# research-center

./: .gitignore  .gitmodules  DEVELOPMENT_STATUS.md  Makefile  README.md  render.yaml  research_center.db-shm
apps/backend/: .env.example  alembic.ini  pyproject.toml  requirements-render.txt
apps/backend/.local-state/budgets/: ai-budget.json
apps/backend/.published/manifests/: day-2026-04-05.json
apps/backend/.published/site/: archive.json  index.html
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 20260326_0001_init.py  20260327_0002_digest_audio_brief_scaffold.py  20260327_0003_data_mode.py  20260327_0004_reset_cached_digests_for_shifted_briefs.py  20260327_0005_reset_digest_cache_for_rewritten_sections.py  20260328_0006_ai_budget_caps.py  20260405_0007_local_publish_and_pairing.py  20260407_0008_profile_pipeline_controls.py  20260409_0009_alphaxiv_profile_settings.py  20260409_0010_item_identity_hash.py
apps/backend/app/: __init__.py  main.py
apps/backend/app/api/: deps.py  router.py
apps/backend/app/core/: config.py  encryption.py  external_urls.py  logging.py  metrics.py  outbound.py  rate_limit.py  security.py
apps/backend/app/db/: session.py  types.py
apps/backend/app/integrations/: alphaxiv.py  cloudkit.py  extractors.py  gmail.py  gmail_imap.py  gmail_oauth.py  llm.py  papers.py  voice.py  zotero.py
apps/backend/app/schemas/: advanced_enrichment.py  auth.py  briefs.py  common.py  connections.py  items.py  local_control.py  ops.py  profile.py  published.py  sources.py
apps/backend/scripts/: upsert_frontier_sources.py
(+176 files in other folders)
